# py-template

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  Makefile_backup  README.md  _environment  pyproject.toml  requirements.txt
.agents/workflows/: entry.md
.cursor/rules/: entry.mdc  py-template.mdc
.github/workflows/: ci.yml
.spec/scripts/: ai_reviewer.md
.spec/scripts/setup/: setup_env.md  setup_log_dir.md
.spec/src/adapters/: __init__.md  database.md  excel_io.md  get_cipher.md
.spec/src/common/: __init__.md  expand_vars.md  load_config.md  logger.md
.spec/tests/: conftest.md
.spec/tests/e2e/: README.md
.spec/tests/integration/: README.md
.spec/tests/unit/: test_conftest.md  test_database.md  test_excel_io.md  test_expand_vars.md  test_get_cipher.md  test_load_config.md  test_logger.md  test_setup_env.md  test_setup_log_dir.md
config/: logging.yml
documents/: AI_NATIVE_ARCHITECTURE_PROMPTS.md  GIT_TAGS_AND_RELEASES.md  GS_ISMS_TEST_MATRIX.md  GS인증기준.md  ISMS-P인증기준.md  LOGGING_POLICY.md  TAG_USAGE_GUIDE.md  TESTING_POLICY.md  ai-context.md  ai_native_spec_driven_development.md
scripts/: ai_reviewer.py
scripts/setup/: backup.py  check_syspath.py  create_logs.py  ensure_python_requires.py  restore_backup.py  setup_env.py  setup_log_dir.py  setup_pyenv.py  setup_syspath.py  setup_venv.py  update.py
src/adapters/: __init__.py  database.py  excel_io.py  get_cipher.py
src/common/: __init__.py  database.py  excel_io.py  expand_vars.py  get_cipher.py  load_config.py  logger.py  substitute.py
tests/: conftest.py
tests/unit/: test_conftest.py  test_database.py  test_ensure_python_requires.py  test_excel_io.py  test_expand_vars.py  test_get_cipher.py  test_load_config.py  test_logger.py  test_setup_env.py  test_setup_log_dir.py  test_substitute.py
