[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "et-xmlfile==2.0.0",
    "iniconfig==2.1.0",
    "numpy==2.3.3",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.2",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "six==1.17.0",
    "tzdata==2025.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
